syntax = "proto3";
package wiradata.users;

option go_package = "pb/users;users";
option java_package = "com.wiradata.erpapplication.users";
option java_multiple_files = true;

import "users/group_message.proto";

message User {
  string id = 1;
  string company_id = 2;
  string region_id = 3;
  string branch_id = 4;
  string username = 5;
  string name = 6;
  string email = 7;
  Group group = 8;
  string created_at =  9;
  string updated_at = 10;
  string updated_by = 11;
}